--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
   "repository": "https://github.com/L0N/crispy-succotash.git",
   "author": "Frank Manue Jr <fpj.manue.jnr@hotmail.com>",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
+  }
 }
