--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "devDependencies": {
     "dotenv": "^8.2.0",
     "nodemon": "^2.0.6"
+  },
+  "scripts": {
+    "dev": "nodemon server.js"
   }
 }
